feat: improve album grid layout, increase card height, fix image cropping and iframe play button visibility
- Adjusted grid to 3 columns for better album display
- Increased card height to fit all content without clipping
- Fixed image cropping with object-fit: cover and set height
- Increased Spotify iframe height to prevent play button clipping
- Added border-radius and padding for improved overall aesthetics

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Imagine Dragons Tribute" />
     <meta
-      property="og:description"
-      content="Tribute website for Imagine Dragons - albums, songs, and more."
+      property="Imagine Dragons Tribute"
+      content="Imagine Dragons Tribute"
     />
     <meta
-      property="og:image"
-      content="https://yourdomain.com/images/og-image.jpg"
+      property="Imagine Dragons Tribute"
+      content="Tribute website for Imagine Dragons - albums, songs, and more."
     />
     <meta name="twitter:card" content="summary_large_image" />
     <link href="src/style.css" rel="stylesheet" type="text/css" />
@@ -26,172 +25,146 @@
       </h2>
     </header>
     <div class="container">
-      <div class="description">
-        <div class="description-grid">
-          <img src="images/band-2.jpg" alt="Imagine Drgons band" />
-        </div>
-        <div class="description-grid">
-          <h2>About Imagine Dragons</h2>
-          <p>
-            Imagine Dragons is an American pop rock band formed in Las Vegas in
-            2008. Known for their energetic performances and genre-blending
-            music, they have sold millions of records worldwide and received
-            multiple Grammy nominations. Their music often explores themes of
-            resilience, hope, and human emotion, resonating with a broad
-            audience.
-          </p>
-          <a href="https://pt.wikipedia.org/wiki/Imagine_Dragons" class="btn"
-            >Learn More</a
-          >
-        </div>
+  <div class="description">
+    <div class="description-card">
+      <img src="images/band.webp" alt="Imagine Dragons band" />
+    </div>
+    <div class="description-card">
+      <h2>About Imagine Dragons</h2>
+      <p>
+        Imagine Dragons is an American pop rock band formed in Las Vegas in 2008.
+        Known for their energetic performances and genre-blending music, they
+        have sold millions of records worldwide and received multiple Grammy
+        nominations. Their music often explores themes of resilience, hope, and
+        human emotion, resonating with a broad audience.
+      </p>
+      <div class="btn-container">
+        <a href="https://pt.wikipedia.org/wiki/Imagine_Dragons" class="btn">
+          Learn More
+        </a>
       </div>
     </div>
-    <div class="album">
-      <div class="album-grid">
-        <img
-          src="images/album-night-visions.jpeg"
-          alt="Night Visions album
-        cover"
-        />
-      </div>
-      <div class="album-grid">
-        <h3>Night Visions (2012)</h3>
-        <p>
-          Imagine Dragons debut album that launched them into international
-          stardom. Blending alternative rock with electronic sounds, Night
-          Visions features hits like “Radioactive” and “Demons.” It's an
-          energetic and emotional record that marked a new era in modern rock.
-        </p>
-        <p>Listen on Spotify:</p>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/album/6nxDQi0FeEwccEPJeNySoS?utm_source=generator&theme=0"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </div>
-      <div class="album-grid">
-        <img
-          src="images/album-smoke-mirrors.jpg"
-          alt="Smoke + Mirrors album
-        cover"
-        />
-      </div>
-      <div class="album-grid">
-        <h3>Smoke + Mirrors (2015)</h3>
-        <p>
-          Their sophomore album dives into deeper, introspective themes,
-          combining electronic textures with poetic lyrics. Smoke + Mirrors
-          showcases a band evolving, delivering intense and heartfelt tracks.
-        </p>
-        <p>Listen on Spotify:</p>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/album/0Ikw6ho559687KCPbSjr0K?utm_source=generator&theme=0"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </div>
-      <div class="album-grid">
-        <img
-          src="images/album-evolve.webp"
-          alt="Evolve album
-        cover"
-        />
-      </div>
-      <div class="album-grid">
-        <h3>Evolve (2017)</h3>
-        <p>
-          Evolve introduces a more pop-oriented and danceable sound, reflecting
-          the band's growth. With anthems like “Believer” and “Thunder,” this
-          album celebrates overcoming challenges and embracing constant change.
-        </p>
-        <p>Listen on Spotify:</p>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/album/33pt9HBdGlAbRGBHQgsZsU?utm_source=generator&theme=0"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </div>
-      <div class="album-grid">
-        <img
-          src="images/album-origins.webp"
-          alt="Origins album
-        cover"
-        />
-      </div>
-      <div class="album-grid">
-        <h3>Origins (2018)</h3>
-        <p>
-          A diverse collection mixing influences across genres, Origins reflects
-          the band's roots and versatility. Songs explore themes of hope, love,
-          and self-identity.
-        </p>
-        <p>Listen on Spotify:</p>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/album/3JfSxDfmwS5OeHPwLSkrfr?utm_source=generator&theme=0"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </div>
-      <div class="album-grid">
-        <img
-          src="images/album-mercury.jpg"
-          alt="Mercury Acts 1 & 2 album
-        cover"
-        />
-      </div>
-      <div class="album-grid">
-        <h3>Mercury – Acts 1 & 2 (2022)</h3>
-        <p>
-          This ambitious double album delves into raw emotions—love, loss, and
-          vulnerability—paired with sophisticated musical production. It
-          highlights the band's artistic maturity and storytelling depth.
-        </p>
-        <p>Listen on Spotify:</p>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/album/6yiXkzHvC0OTmhfDQOEWtS?utm_source=generator&theme=0"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </div>
-      <div class="album-grid">
-        <img
-          src="images/album-loom.jpg"
-          alt="Loom album
-        cover"
-        />
-      </div>
-      <div class="album-grid">
-        <h3>Loom (2024)</h3>
-        <p>
-          The latest release, Loom, presents a fresh approach with electronic
-          elements and futuristic themes, while preserving Imagine Dragons’
-          unique essence.
-        </p>
-        <p>Listen on Spotify:</p>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/album/7EPrkhjTBrwAV8yAKCmY0Y?utm_source=generator&theme=0"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </div>
+  </div>
+
+  <div class="album">
+    <div class="album-grid">
+      <img src="images/album-night-visions.jpeg" alt="Night Visions album cover" />
+      <h3>Night Visions (2012)</h3>
+      <p>
+        Imagine Dragons debut album that launched them into international stardom.
+        Blending alternative rock with electronic sounds, Night Visions features
+        hits like “Radioactive” and “Demons.” It's an energetic and emotional
+        record that marked a new era in modern rock.
+      </p>
+      <p>Listen on Spotify:</p>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/album/6nxDQi0FeEwccEPJeNySoS?utm_source=generator&theme=0"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
+
+    <div class="album-grid">
+      <img src="images/album-smoke-mirrors.jpg" alt="Smoke + Mirrors album cover" />
+      <h3>Smoke + Mirrors (2015)</h3>
+      <p>
+        Their sophomore album dives into deeper, introspective themes, combining
+        electronic textures with poetic lyrics. Smoke + Mirrors showcases a band
+        evolving, delivering intense and heartfelt tracks.
+      </p>
+      <p>Listen on Spotify:</p>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/album/0Ikw6ho559687KCPbSjr0K?utm_source=generator&theme=0"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
+
+    <div class="album-grid">
+      <img src="images/album-evolve.webp" alt="Evolve album cover" />
+      <h3>Evolve (2017)</h3>
+      <p>
+        Evolve introduces a more pop-oriented and danceable sound, reflecting the
+        band's growth. With anthems like “Believer” and “Thunder,” this album
+        celebrates overcoming challenges and embracing constant change.
+      </p>
+      <p>Listen on Spotify:</p>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/album/33pt9HBdGlAbRGBHQgsZsU?utm_source=generator&theme=0"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
+
+    <div class="album-grid">
+      <img src="images/album-origins.webp" alt="Origins album cover" />
+      <h3>Origins (2018)</h3>
+      <p>
+        A diverse collection mixing influences across genres, Origins reflects the
+        band's roots and versatility. Songs explore themes of hope, love, and
+        self-identity.
+      </p>
+      <p>Listen on Spotify:</p>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/album/3JfSxDfmwS5OeHPwLSkrfr?utm_source=generator&theme=0"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
+
+    <div class="album-grid">
+      <img src="images/album-mercury.jpg" alt="Mercury Acts 1 & 2 album cover" />
+      <h3>Mercury – Acts 1 & 2 (2022)</h3>
+      <p>
+        This ambitious double album delves into raw emotions—love, loss, and
+        vulnerability—paired with sophisticated musical production. It highlights
+        the band's artistic maturity and storytelling depth.
+      </p>
+      <p>Listen on Spotify:</p>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/album/6yiXkzHvC0OTmhfDQOEWtS?utm_source=generator&theme=0"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
+
+    <div class="album-grid">
+      <img src="images/album-loom.jpg" alt="Loom album cover" />
+      <h3>Loom (2024)</h3>
+      <p>
+        The latest release, Loom, presents a fresh approach with electronic
+        elements and futuristic themes, while preserving Imagine Dragons’ unique
+        essence.
+      </p>
+      <p>Listen on Spotify:</p>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/album/7EPrkhjTBrwAV8yAKCmY0Y?utm_source=generator&theme=0"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
+  </div>
+</div>
+      
+
       <p>Songs</p>
       <h2>Listen to My Favourite Songs Here:</h2>
       <div class="songs">
