--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             audience.
           </p>
           <div class="btn-container">
-            <a href="https://pt.wikipedia.org/wiki/Imagine_Dragons" class="btn"
+            <a
+              href="https://pt.wikipedia.org/wiki/Imagine_Dragons"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="btn"
               >Learn More</a
             >
           </div>
@@ -286,18 +290,26 @@
           <tr>
             <td>
               <p>
-                <a href="https://shop.imaginedragonsmusic.com/pages/tour"
+                <a
+                  href="https://shop.imaginedragonsmusic.com/pages/tour"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   >Imagine Dragons Official Shop</a
                 >
               </p>
               <p>
                 <a
                   href="https://www.youtube.com/channel/UCT9zcQNlyht7fRlcjmflRSA"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   >YouTube Channel</a
                 >
               </p>
               <p>
-                <a href="https://www.instagram.com/imaginedragons/"
+                <a
+                  href="https://www.instagram.com/imaginedragons/"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   >Instagram</a
                 >
               </p>
@@ -317,6 +329,14 @@
                 I'm Tânia Figueiredo, a junior front-end developer. This project
                 was built as part of the SheCodes Responsive Workshop to
                 strengthen my skills in HTML, CSS, and responsive design.
+                <br />
+                <a
+                  href="https://github.com/Tania-Figueiredo/Tania-Figueiredo"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Check my work on GitHub
+                </a>
               </p>
             </td>
           </tr>
